--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div class="page">
       <header class="header">
         <img
           class="logo logo_place_header"
-          src="images/logo_place_header.svg"
+          src="./images/logo_place_header.svg"
           alt="логотип Яндекс.Практикум"
         />
         <h1 class="header__title">Научиться учиться</h1>
@@ -26,7 +26,7 @@
           src="images/header-image.png"
           alt="основная иллюстрация"
         />
-        <div class="header__square-pic"></div>
+        <div class="rotation header__square-pic"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -53,15 +53,123 @@
             </div>
           </article>
         </section>
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+          <ul class="cards">
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-attention.png"
+                alt="фото книги"
+              />
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать сфокусированное и
+                рассеянное мышление.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-recall.png"
+                alt="фото скульптуры"
+              />
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит соединить разрозненные
+                порции памяти.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-interliving.png"
+                alt="фото конгресс-хола"
+              />
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, они обогащают друг
+                друга.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-question.png"
+                alt="фото закрытого пространства"
+              />
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, который вас
+                действительно волнует.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-competence.png"
+                alt="фото руки со стопкой книг"
+              />
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: вам только
+                кажется, что вы владеете новой темой.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="video">
+          <h2 class="section-title">Видео нa TED</h2>
+          <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+          <div class="video__iframes">
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              title="YouTube видеоплейер"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              title="YouTube видеоплейер"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+        <section class="oakley">
+          <article class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
+              </p>
+            </div>
+          </article>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a class="feynman__link" href="#">Подробнее &rarr;</a>
+        </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
           <h3 class="section-subtitle">Про учёбу и мозг</h3>
           <ul class="table">
             <li class="table__cell">
               <h3 class="table__heading">86 миллиардов</h3>
-              <p class="table__text">
-                Число нейронов в мозге человека
-              </p>
+              <p class="table__text">Число нейронов в мозге человека</p>
             </li>
             <li class="table__cell">
               <h3 class="table__heading">2.1 миллиарда</h3>
@@ -103,14 +211,36 @@
             </li>
           </ul>
         </section>
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a class="feynman__link" href="#">Подробнее &rarr;</a>
+        <section class="khan">
+          <div class="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__title">Весь мир — школа</h2>
+            <blockquote class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.
+            </blockquote>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <img
+                class="khan__book-pic"
+                src="./images/khan-book.jpg"
+                alt="фото обложки книги"
+              />
+              <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
+            </div>
+          </div>
         </section>
         <section class="kaufman">
-          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-          <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+          <h2 class="section-title section-title_theme_dark">
+            Принципы обучения
+          </h2>
+          <h3 class="section-subtitle section-subtitle_theme_dark">
+            от Джоша Кауфмана
+          </h3>
           <ol class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark"></h3>
@@ -132,7 +262,9 @@
             </li>
             <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark"></h3>
-              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+              <p class="table__text table__text_theme_dark">
+                Разбейте навык на элементы.
+              </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark"></h3>
@@ -171,7 +303,41 @@
               </p>
             </li>
           </ol>
-          <div class="kaufman__triangle"></div>
+          <div class="rotation kaufman__triangle"></div>
+        </section>
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <h3 class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </h3>
+          <ul class="resources__logo-zone">
+            <li class="resources__logo">
+              <a href="#">
+                <img
+                  src="./images/resources-arzamas.svg"
+                  alt="логотип Arzamas"
+                />
+              </a>
+            </li>
+            <li class="resources__logo">
+              <a href="#">
+                <img src="./images/resources-n1.svg" alt="логотип N+1" />
+              </a>
+            </li>
+            <li class="resources__logo">
+              <a href="#">
+                <img
+                  src="./images/resources-strelka.svg"
+                  alt="логотип Strelka"
+                />
+              </a>
+            </li>
+            <li class="resources__logo">
+              <a href="#">
+                <img src="./images/resources-polka.svg" alt="логотип Polka" />
+              </a>
+            </li>
+          </ul>
         </section>
       </main>
       <footer class="footer">
@@ -179,10 +345,10 @@
           <div class="footer__column footer__column_content_copyright">
             <img
               class="logo logo_place_footer"
-              src="images/logo_place_footer.svg"
+              src="./images/logo_place_footer.svg"
               alt="логотип Яндекс.Практикум"
             />
-            <p class="footer__author">&copy;2019.Роман Кищенко</p>
+            <p class="footer__author">&copy;2022. Роман Кищенко</p>
           </div>
           <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
